[gd_scene load_steps=6 format=3 uid="uid://b82tut8ypl2dr"]

[ext_resource type="Script" path="res://Bandaged/BandageFile.gd" id="1_pkkjl"]
[ext_resource type="Texture2D" uid="uid://d1ntmupdpkjoc" path="res://assets/Bandaged/Screenshot 2024-11-01 at 21.05.17.png" id="2_kjokv"]
[ext_resource type="Texture2D" uid="uid://6xvv7xfe1mra" path="res://assets/Misc/PatchRegular.png" id="3_puc5i"]
[ext_resource type="FontFile" uid="uid://bb36i8qiqdl26" path="res://assets/Misc/Adventurer.ttf" id="4_vkr0h"]
[ext_resource type="Texture2D" uid="uid://caowl4456vs88" path="res://assets/Misc/PatchInverted.png" id="5_itfa6"]

[node name="DialogueScene" type="Node2D"]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_pkkjl")

[node name="NPC" type="TextureRect" parent="."]
offset_left = -14.0
offset_top = -11.0
offset_right = 1644.0
offset_bottom = 2298.0
texture = ExtResource("2_kjokv")

[node name="InspectEye" type="TextureButton" parent="."]
offset_left = 2010.0
offset_top = 850.0
offset_right = 3068.0
offset_bottom = 1037.0
texture_normal = ExtResource("3_puc5i")
texture_pressed = ExtResource("5_itfa6")
texture_hover = ExtResource("5_itfa6")
ignore_texture_size = true
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="InspectEye"]
layout_mode = 0
offset_left = -3.0
offset_top = 20.0
offset_right = 1053.0
offset_bottom = 175.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_vkr0h")
theme_override_font_sizes/normal_font_size = 140
bbcode_enabled = true
text = "[center]Inspect eye[/center]"

[node name="Back" type="TextureButton" parent="."]
offset_left = 2015.0
offset_top = 320.0
offset_right = 3073.0
offset_bottom = 507.0
texture_normal = ExtResource("3_puc5i")
texture_pressed = ExtResource("5_itfa6")
texture_hover = ExtResource("5_itfa6")
ignore_texture_size = true
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Back"]
layout_mode = 0
offset_left = -3.0
offset_top = 20.0
offset_right = 1053.0
offset_bottom = 175.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_vkr0h")
theme_override_font_sizes/normal_font_size = 140
bbcode_enabled = true
text = "[center]Back[/center]"

[node name="InspectVein" type="TextureButton" parent="."]
offset_left = 2025.0
offset_top = 1380.0
offset_right = 3083.0
offset_bottom = 1574.0
texture_normal = ExtResource("3_puc5i")
texture_pressed = ExtResource("5_itfa6")
texture_hover = ExtResource("5_itfa6")
ignore_texture_size = true
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="InspectVein"]
layout_mode = 0
offset_left = -3.0
offset_top = 20.0
offset_right = 1053.0
offset_bottom = 175.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_vkr0h")
theme_override_font_sizes/normal_font_size = 140
bbcode_enabled = true
text = "[center]Inspect veins[/center]"

[node name="Reject" type="TextureButton" parent="."]
offset_left = 2315.0
offset_top = 1890.0
offset_right = 2792.0
offset_bottom = 2056.0
texture_normal = ExtResource("3_puc5i")
texture_pressed = ExtResource("5_itfa6")
texture_hover = ExtResource("5_itfa6")
ignore_texture_size = true
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Reject"]
layout_mode = 0
offset_left = 1.0
offset_top = 18.0
offset_right = 474.0
offset_bottom = 162.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_vkr0h")
theme_override_font_sizes/normal_font_size = 140
bbcode_enabled = true
text = "[center]Reject[/center]"

[connection signal="pressed" from="InspectEye" to="." method="_on_inspect_bandaged_eye_pressed"]
[connection signal="pressed" from="InspectVein" to="." method="_on_inspect_bandaged_vein_pressed"]
[connection signal="pressed" from="Reject" to="." method="_on_reject_pressed"]
